--- a/dijazottak.html
+++ b/dijazottak.html
@@ -26,7 +26,8 @@
             <li>Blaskó Péter (2022)</li>
             <li>Csomós Mari (2017)</li>
             <li>Darvas Iván (2000)</li>
-            <li><a href="garas.html">Garas Dezső</a> (2000) <li>Haumann Péter (2010)</li>
+            <li><a href="index.html">Garas Dezső</a> (2000) 
+            <li>Haumann Péter (2010)</li>
             <li>Kállai Ferenc (2000)</li>
             <li>Kulka János (2020)</li>
             <li>Lukács Margit (2000)</li>
@@ -73,4 +74,5 @@
     </div>
 
 </body>
+
 </html>
